huffmanin revamppaus, lempel meneillään